kubernetes/stunner.yaml
# Stunner: An ingress gateway for WebRTC
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stunner
  namespace: default
spec:
  selector:
    matchLabels:
      app: stunner
  replicas: 1
  template:
    metadata:
      labels:
        app: stunner
    spec:
      containers:
      - name: stunnerd
        image: l7mp/stunnerd:latest
        # imagePullPolicy: Never
        imagePullPolicy: Always
        command: ["stunnerd"]
        args: ["-v", "-c", "/stunnerd.conf"]
        # args: ["-c", "/stunnerd.conf"]
---
apiVersion: v1
kind: Service
metadata:
  name: stunner
  namespace: default
  labels:
    app: stunner
spec:
  ports:
    - port: 3478
      targetPort: 3478
      # nodePort: 30478
      protocol: UDP
      name: stunner-udp
  type: LoadBalancer
  selector:
    app: stunner

---
# STUN/TURN over TCP: Not implemented as of v0.1
# apiVersion: v1
# kind: Service
# metadata:
#   name: stunner-tcp
#   labels:
#     app: stunner
# spec:
#   ports:
#     - port: 3478
#       targetPort: 3478
#       protocol: TCP
#       name: stunner-tcp
#   type: LoadBalancer
#   selector:
#     app: stunner

---
# lock down access from the TURN server to anywhere!
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: stunner-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: stunner
  policyTypes:
  - Egress
